--- a/front.html
+++ b/front.html
@@ -35,7 +35,9 @@ var preferences = {
   detectTypeMismatch: true,
   // Set duration before hiding a toast
   // Values are in ms; default: 3000
-  toastDuration: 3000
+  toastDuration: 3000,
+  // Enable Keisei (Phonetic-Semantic) addon
+  keisei: true
 };
 
 // Helper to parse comma-separated lists
